fix(sonar): replace Collectors.toList() with Stream.toList() (java:S6204)
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>